# sf-lwc-litestar-app

./: .gitignore  README.md  main.py  pyproject.toml  run.bat  setup.py  setup_send_data.py
apps/: const.py  requirements.txt
apps/config_sample/: README.md
apps/config_sample/utils/config_utils/: config_loader.py
apps/salesforce_app/lwc/: package-lock.json  package.json
apps/salesforce_app/lwc/src/: index.html
apps/salesforce_app/server/: main.py  models.py
apps/salesforce_app/server/routers/: apex_router.py  auth_router.py  cdc_router.py  composite_router.py  lwc_router.py  restapi_router.py
apps/salesforce_app/server/sobjects/: content_ducument_link.py  content_version.py  content_version_data.py  download_master.py
apps/storage_app/client/: auth.py  download_master_sync.py  http_client.py  notify.py  salesforce_client.py  token.py  worker_executor.py  worker_loop.py
apps/storage_app/server/: main.py
apps/storage_app/server/routers/: download_router.py
apps/storage_app/utils/: crypto.py  logging_config.py  logging_decorator.py  queue_manager.py
data/storage/schema/: generate_models.py  schema.json
docs/: directories.md  endpoint_upload.md  flow_0.md  module_list.md  python_app.md  salesforce_lwc.md
utils_samples/: check.py  locustfile.py  sample_fastapi.py  sample_fastapi_queue.py  sample_litestar.py  sample_litestar_queue.py  test_benchmark_log.py  test_tracelog.py  test_tracelog_1.py  test_tracelog_2.py
utils_samples/app/utils/config_utils/: hot_config.py
utils_samples/config/: config.toml
(+6 files in other folders)
