[project]
name = "sf-lwc-litestar-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=48.0.0",
    "duckdb>=1.5.2",
    "faker>=40.15.0",
    "fastapi>=0.136.1",
    "litestar>=2.21.1",
    "locust>=2.44.0",
    "openpyxl>=3.1.5",
    "portalocker>=3.2.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "reportlab>=4.5.0",
    "streamlit>=1.57.0",
    "structlog>=25.5.0",
    "uvicorn>=0.46.0",
]
